--- a/dev/bak/author-sts.yaml
+++ b/dev/bak/author-sts.yaml
@@ -1,45 +1,6 @@
 ---
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: author-s3-pv
-spec:
-  capacity:
-    storage: 100Gi # ignored, required
-  accessModes:
-    - ReadWriteMany # supported options: ReadWriteMany / ReadOnlyMany
-  storageClassName: "" # Required for static provisioning
-  claimRef: # To ensure no other PVCs can claim this PV
-    namespace: zb-schools # Namespace is required even though it's in "default" namespace.
-    name: author-s3-pv # Name of your PVC
-  mountOptions:
-    - allow-delete
-    - region ap-southeast-1
-    - prefix author/
-    - sse aws:kms # Use customer managed KMS key for server side encryption
-    - sse-kms-key-id arn:aws:kms:ap-southeast-1:767397694429:key/c78efda0-5009-4e39-a1ff-7e92aa94e651 # set key id (optional)
-  csi:
-    driver: s3.csi.aws.com # required
-    volumeHandle: s3-csi-driver-volume
-    volumeAttributes:
-      bucketName: s3-sph-zb-schools-dev-magnolia-share
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: author-s3-pv
-  namespace: zb-schools
-spec:
-  accessModes:
-    - ReadWriteMany # Supported options: ReadWriteMany / ReadOnlyMany
-  storageClassName: "" # Required for static provisioning
-  resources:
-    requests:
-      storage: 100Gi # Ignored, required
-  volumeName: author-s3-pv # Name of your PV
----
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   annotations:
     k8s.kuboard.cn/workload: magnolia-author-backend
@@ -52,11 +13,7 @@ spec:
   selector:
     matchLabels:
       k8s.kuboard.cn/name: magnolia-author-backend
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+  podManagementPolicy: OrderedReady
   template:
     metadata:
       annotations:
@@ -71,10 +28,6 @@ spec:
       labels:
         k8s.kuboard.cn/name: magnolia-author-backend
     spec:
-      volumes:
-        - name: persistent-storage
-          persistentVolumeClaim:
-            claimName: author-s3-pv
       containers:
         - env:
             - name: TZ
@@ -88,9 +41,6 @@ spec:
           image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-backend"
           imagePullPolicy: IfNotPresent
           name: magolia-backend
-          volumeMounts:
-            - name: persistent-storage
-              mountPath: /share-data
           ports:
             - containerPort: 8080
               name: port8080
@@ -134,7 +84,7 @@ spec:
     - port: 8080
       targetPort: 8080
       protocol: TCP
-  type: ClusterIP
+  type: NodePort
   selector:
     k8s.kuboard.cn/name: magnolia-author-backend
   sessionAffinity: ClientIP
@@ -169,5 +119,5 @@ spec:
       protocol: TCP
   type: ClusterIP
   selector:
-    statefulset.kubernetes.io/pod-name: magnolia-author-backend-1 
+    statefulset.kubernetes.io/pod-name: magnolia-author-backend-1
   sessionAffinity: ClientIP
