--- a/dev/magnolia-author-backend.yaml
+++ b/dev/magnolia-author-backend.yaml
@@ -39,7 +39,7 @@ spec:
   volumeName: author-s3-pv # Name of your PV
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   annotations:
     k8s.kuboard.cn/workload: magnolia-author-backend
@@ -48,15 +48,11 @@ metadata:
   name: magnolia-author-backend
   namespace: zb-schools
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       k8s.kuboard.cn/name: magnolia-author-backend
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+  podManagementPolicy: OrderedReady  
   template:
     metadata:
       annotations:
