--- a/prd/magnolia-public-mobile.yaml
+++ b/prd/magnolia-public-mobile.yaml
@@ -115,7 +115,7 @@ metadata:
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-mobile
+  name: magnolia-public-mobile-svc
   namespace: zb-schools
 spec:
   ports:
