--- a/prd/magnolia-author-frontend.yaml
+++ b/prd/magnolia-author-frontend.yaml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
         - image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-frontend"
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           name: magnolia-author-frontend
           ports:
             - containerPort: 80
