--- a/prd/magnolia-public-backend.yaml
+++ b/prd/magnolia-public-backend.yaml
@@ -1,43 +1,4 @@
 ---
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: public-s3-pv
-spec:
-  capacity:
-    storage: 100Gi # ignored, required
-  accessModes:
-    - ReadWriteMany # supported options: ReadWriteMany / ReadOnlyMany
-  storageClassName: "" # Required for static provisioning
-  claimRef: # To ensure no other PVCs can claim this PV
-    namespace: zb-schools # Namespace is required even though it's in "default" namespace.
-    name: public-s3-pv # Name of your PVC
-  mountOptions:
-    - allow-delete
-    - region ap-southeast-1
-    - prefix public/
-    - sse aws:kms # Use customer managed KMS key for server side encryption
-    - sse-kms-key-id arn:aws:kms:ap-southeast-1:767397694429:key/c78efda0-5009-4e39-a1ff-7e92aa94e651 # set key id (optional)
-  csi:
-    driver: s3.csi.aws.com # required
-    volumeHandle: s3-csi-driver-volume
-    volumeAttributes:
-      bucketName: s3-sph-zb-schools-dev-magnolia-share
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: public-s3-pv
-  namespace: zb-schools
-spec:
-  accessModes:
-    - ReadWriteMany # Supported options: ReadWriteMany / ReadOnlyMany
-  storageClassName: "" # Required for static provisioning
-  resources:
-    requests:
-      storage: 100Gi # Ignored, required
-  volumeName: public-s3-pv # Name of your PV
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -49,7 +10,7 @@ metadata:
   namespace: zb-schools
 spec:
   podManagementPolicy: OrderedReady
-  replicas: 2
+  replicas: 3
   revisionHistoryLimit: 10
   selector:
     matchLabels:
@@ -68,16 +29,12 @@ spec:
       labels:
         k8s.kuboard.cn/name: magnolia-public-backend
     spec:
-      volumes:
-        - name: persistent-storage
-          persistentVolumeClaim:
-            claimName: public-s3-pv
       containers:
         - env:
             - name: TZ
               value: CST-8
             - name: BASE_URL
-              value: "https://www.zbschools.sg"
+              value: "https://prd.zbschools.sg"
             - name: ENV_TYPE
               value: "prd"
             - name: INSTANCE_TYPE
@@ -85,9 +42,6 @@ spec:
           image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
           imagePullPolicy: IfNotPresent
           name: magolia-public
-          volumeMounts:
-            - name: persistent-storage
-              mountPath: /share-data
           ports:
             - containerPort: 8080
               name: port8080
