--- a/qa/magnolia-author-frontend.yaml
+++ b/qa/magnolia-author-frontend.yaml
@@ -62,7 +62,7 @@ spec:
             items:
               - key: default.conf
                 path: default.conf
-            name: nginx1-conf
+            name: author-nginx-conf
           name: confd
 ---
 apiVersion: v1
@@ -91,7 +91,7 @@ data:
     }
 kind: ConfigMap
 metadata:
-  name: nginx1-conf
+  name: author-nginx-conf
   namespace: zb-schools
 ---
 apiVersion: v1
