--- a/qa/magnolia-public-mobile.yaml
+++ b/qa/magnolia-public-mobile.yaml
@@ -90,7 +90,7 @@ data:
 
 
         location /  {
-                root /usr/share/nginx/html;
+                root /usr/share/nginx/html/qa;
                 index  index.html;
                 client_max_body_size 1000m;
                 try_files $uri $uri/ /index.html @rewrites;
