--- a/qa/magnolia-author-frontend.yaml
+++ b/qa/magnolia-author-frontend.yaml
@@ -74,7 +74,7 @@ data:
         server_name  localhost;
 
          location / {
-            root /usr/share/nginx/html;
+            root /usr/share/nginx/html/qa;
             index  index.html;
             client_max_body_size 1000m;
             try_files $uri $uri/ /authorFrontend/index.html @rewrites;
