--- a/dev/magnolia-author-frontend.yaml
+++ b/dev/magnolia-author-frontend.yaml
@@ -10,7 +10,7 @@ metadata:
   namespace: zb-schools
 spec:
   progressDeadlineSeconds: 600
-  replicas: 1
+  replicas: 2
   revisionHistoryLimit: 10
   selector:
     matchLabels:
@@ -36,9 +36,17 @@ spec:
             - containerPort: 80
               name: http
               protocol: TCP
+          readinessProbe:
+            failureThreshold: 3
+            initialDelaySeconds: 50
+            periodSeconds: 5
+            successThreshold: 1
+            tcpSocket:
+              port: 80
+            timeoutSeconds: 2
           resources:
             limits:
-              cpu: "1.2"
+              cpu: "1"
               memory: 4Gi
             requests:
               cpu: "1"
