--- a/dev/magnolia-public-mobile.yaml
+++ b/dev/magnolia-public-mobile.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     k8s.kuboard.cn/name: nginx-mobile
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       k8s.kuboard.cn/name: nginx-mobile
@@ -24,9 +24,17 @@ spec:
             - containerPort: 80
               name: http
               protocol: TCP
+          readinessProbe:
+            failureThreshold: 3
+            initialDelaySeconds: 50
+            periodSeconds: 5
+            successThreshold: 1
+            tcpSocket:
+              port: 80
+            timeoutSeconds: 2
           resources:
             limits:
-              cpu: "1.2"
+              cpu: "1"
               memory: 4Gi
             requests:
               cpu: "1"
