--- a/dev/saas-homework-service.yaml
+++ b/dev/saas-homework-service.yaml
@@ -10,7 +10,7 @@ metadata:
   namespace: zb-schools
 spec:
   progressDeadlineSeconds: 600
-  replicas: 1
+  replicas: 2
   revisionHistoryLimit: 10
   selector:
     matchLabels:
@@ -51,13 +51,21 @@ spec:
             - containerPort: 8080
               name: port8080
               protocol: TCP
+          readinessProbe:
+            failureThreshold: 3
+            initialDelaySeconds: 50
+            periodSeconds: 5
+            successThreshold: 1
+            tcpSocket:
+              port: 8080
+            timeoutSeconds: 2
           resources:
             limits:
-              cpu: "1.2"
-              memory: 6Gi
+              cpu: "1"
+              memory: 4Gi
             requests:
               cpu: "1"
-              memory: 6Gi
+              memory: 4Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
