--- a/qa/saas-transfer-service.yaml
+++ b/qa/saas-transfer-service.yaml
@@ -56,6 +56,14 @@ spec:
             - containerPort: 8081
               name: port8081
               protocol: TCP
+          readinessProbe:
+            failureThreshold: 3
+            initialDelaySeconds: 50
+            periodSeconds: 5
+            successThreshold: 1
+            tcpSocket:
+              port: 8081
+            timeoutSeconds: 2
           resources:
             limits:
               cpu: "3"
