--- a/qa/magnolia-author-frontend.yaml
+++ b/qa/magnolia-author-frontend.yaml
@@ -10,7 +10,7 @@ metadata:
   namespace: zb-schools
 spec:
   progressDeadlineSeconds: 600
-  replicas: 1
+  replicas: 2
   revisionHistoryLimit: 10
   selector:
     matchLabels:
@@ -36,6 +36,14 @@ spec:
             - containerPort: 80
               name: http
               protocol: TCP
+          readinessProbe:
+            failureThreshold: 3
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            successThreshold: 1
+            tcpSocket:
+              port: 80
+            timeoutSeconds: 2
           resources:
             limits:
               cpu: "2"
