--- a/qa/magnolia-public-mobile.yaml
+++ b/qa/magnolia-public-mobile.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     k8s.kuboard.cn/name: nginx-mobile
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       k8s.kuboard.cn/name: nginx-mobile
@@ -28,6 +28,14 @@ spec:
             - mountPath: /etc/nginx/conf.d/default.conf
               name: volume-conf
               subPath: default.conf
+          readinessProbe:
+            failureThreshold: 3
+            initialDelaySeconds: 20
+            periodSeconds: 5
+            successThreshold: 1
+            tcpSocket:
+              port: 80
+            timeoutSeconds: 2
           resources:
             limits:
               cpu: "2"
