--- a/qa/magnolia-public-frontend.yaml
+++ b/qa/magnolia-public-frontend.yaml
@@ -9,7 +9,7 @@ metadata:
   name: magnolia-public-frontend
   namespace: zb-schools
 spec:
-  replicas: 1 
+  replicas: 2 
   revisionHistoryLimit: 10
   selector:
     matchLabels:
@@ -35,6 +35,14 @@ spec:
             - containerPort: 80
               name: http
               protocol: TCP
+          readinessProbe:
+            failureThreshold: 3
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            successThreshold: 1
+            tcpSocket:
+              port: 80
+            timeoutSeconds: 2
           resources:
             limits:
               cpu: "2"
