--- a/prd/magnolia-author-frontend.yaml
+++ b/prd/magnolia-author-frontend.yaml
@@ -36,6 +36,14 @@ spec:
             - containerPort: 80
               name: http
               protocol: TCP
+          readinessProbe:
+            failureThreshold: 3
+            initialDelaySeconds: 50
+            periodSeconds: 5
+            successThreshold: 1
+            tcpSocket:
+              port: 80
+            timeoutSeconds: 2
           resources:
             limits:
               cpu: "2"
