--- a/dev/magnolia-public-mobile.yaml
+++ b/dev/magnolia-public-mobile.yaml
@@ -52,7 +52,7 @@ spec:
             items:
               - key: nginx-mobile.conf
                 path: default.conf
-            name: nginx-conf-mobile
+            name: mobile-nginx-conf
           name: volume-conf
 
 ---
@@ -117,7 +117,7 @@ kind: ConfigMap
 metadata:
   annotations: {}
   labels: {}
-  name: nginx-conf-mobile
+  name: mobile-nginx-conf
   namespace: zb-schools
 ---
 apiVersion: v1
