--- a/qa/magnolia-author-backend.yaml
+++ b/qa/magnolia-author-backend.yaml
@@ -91,3 +91,45 @@ spec:
   sessionAffinityConfig:
     clientIP:
       timeoutSeconds: 86400
+---
+apiVersion: v1
+kind: Service
+metadata:
+  namespace: zb-schools
+  name: magnolia-author-backend-svc-0
+spec:
+  ports:
+    - port: 8080
+      targetPort: 8080
+      protocol: TCP
+  type: ClusterIP
+  selector:
+    statefulset.kubernetes.io/pod-name: magnolia-author-backend-0
+---
+apiVersion: v1
+kind: Service
+metadata:
+  namespace: zb-schools
+  name: magnolia-author-backend-svc-1
+spec:
+  ports:
+    - port: 8080
+      targetPort: 8080
+      protocol: TCP
+  type: ClusterIP
+  selector:
+    statefulset.kubernetes.io/pod-name: magnolia-author-backend-1
+---
+apiVersion: v1
+kind: Service
+metadata:
+  namespace: zb-schools
+  name: magnolia-author-backend-svc-2
+spec:
+  ports:
+    - port: 8080
+      targetPort: 8080
+      protocol: TCP
+  type: ClusterIP
+  selector:
+    statefulset.kubernetes.io/pod-name: magnolia-author-backend-2
