--- a/qa/magnolia-author-backend.yaml
+++ b/qa/magnolia-author-backend.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   annotations:
     k8s.kuboard.cn/workload: magnolia-author-backend
@@ -13,7 +13,11 @@ spec:
   selector:
     matchLabels:
       k8s.kuboard.cn/name: magnolia-author-backend
-  podManagementPolicy: OrderedReady
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       annotations:
@@ -91,45 +95,3 @@ spec:
   sessionAffinityConfig:
     clientIP:
       timeoutSeconds: 86400
----
-apiVersion: v1
-kind: Service
-metadata:
-  namespace: zb-schools
-  name: magnolia-author-backend-svc-0
-spec:
-  ports:
-    - port: 8080
-      targetPort: 8080
-      protocol: TCP
-  type: ClusterIP
-  selector:
-    statefulset.kubernetes.io/pod-name: magnolia-author-backend-0
----
-apiVersion: v1
-kind: Service
-metadata:
-  namespace: zb-schools
-  name: magnolia-author-backend-svc-1
-spec:
-  ports:
-    - port: 8080
-      targetPort: 8080
-      protocol: TCP
-  type: ClusterIP
-  selector:
-    statefulset.kubernetes.io/pod-name: magnolia-author-backend-1
----
-apiVersion: v1
-kind: Service
-metadata:
-  namespace: zb-schools
-  name: magnolia-author-backend-svc-2
-spec:
-  ports:
-    - port: 8080
-      targetPort: 8080
-      protocol: TCP
-  type: ClusterIP
-  selector:
-    statefulset.kubernetes.io/pod-name: magnolia-author-backend-2
