--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -203,7 +203,7 @@ spec:
     - port: 80
       targetPort: 80
       protocol: TCP
-  type: NodePort
+  type: ClusterIP
   selector:
     k8s.kuboard.cn/name: magnolia-public-frontend
   sessionAffinity: ClientIP
