--- a/dev/magnolia-author-backend.yaml
+++ b/dev/magnolia-author-backend.yaml
@@ -135,7 +135,7 @@ data:
           </Realm>
           <Host name="localhost"  appBase="webapps"
                 unpackWARs="true" autoDeploy="true">
-            <Context path="" docBase="/magnoliaAuthor" />
+            <Context path="" docBase="magnoliaAuthor" />
             <Valve className="org.apache.catalina.valves.AccessLogValve" directory="logs"
                    prefix="localhost_access_log" suffix=".txt"
                    pattern="%h %l %u %t &quot;%r&quot; %s %b" />
