--- a/dev/magnolia-public-backend.yaml
+++ b/dev/magnolia-public-backend.yaml
@@ -142,6 +142,7 @@ data:
           </Realm>
           <Host name="localhost"  appBase="webapps"
                 unpackWARs="true" autoDeploy="true">
+            <Context path="/" docBase="magnoliaPublic"/>
             <Valve className="org.apache.catalina.valves.AccessLogValve" directory="logs"
                    prefix="localhost_access_log" suffix=".txt"
                    pattern="%h %l %u %t &quot;%r&quot; %s %b" />
