--- a/prd/magnolia-public-backend.yaml
+++ b/prd/magnolia-public-backend.yaml
@@ -70,6 +70,10 @@ spec:
               memory: 24Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
+          volumeMounts:
+            - mountPath: /usr/local/tomcat/conf/server.xml
+              name: volume-xml
+              subPath: server.xml
       dnsPolicy: ClusterFirst
       imagePullSecrets:
         - name: aws-ecr
@@ -79,6 +83,14 @@ spec:
       serviceAccount: service-account-sph-zb-schools
       serviceAccountName: service-account-sph-zb-schools
       terminationGracePeriodSeconds: 30
+      volumes:
+        - configMap:
+            defaultMode: 420
+            items:
+              - key: server.xml
+                path: server.xml
+            name: public-server.xml
+          name: volume-xml
 ---
 apiVersion: v1
 kind: Service
@@ -102,3 +114,48 @@ spec:
     clientIP:
       timeoutSeconds: 86400
   type: ClusterIP
+---
+apiVersion: v1
+data:
+  server.xml: |-
+    <?xml version="1.0" encoding="UTF-8"?>
+
+    <Server port="8005" shutdown="SHUTDOWN">
+      <Listener className="org.apache.catalina.startup.VersionLoggerListener" />
+      <Listener className="org.apache.catalina.core.AprLifecycleListener" />
+      <Listener className="org.apache.catalina.core.JreMemoryLeakPreventionListener" />
+      <Listener className="org.apache.catalina.mbeans.GlobalResourcesLifecycleListener" />
+      <Listener className="org.apache.catalina.core.ThreadLocalLeakPreventionListener" />
+      <GlobalNamingResources>
+        <Resource name="UserDatabase" auth="Container"
+                  type="org.apache.catalina.UserDatabase"
+                  description="User database that can be updated and saved"
+                  factory="org.apache.catalina.users.MemoryUserDatabaseFactory"
+                  pathname="conf/tomcat-users.xml" />
+      </GlobalNamingResources>
+      <Service name="Catalina">
+        <Connector port="8080" protocol="HTTP/1.1"
+                   connectionTimeout="20000"
+                   redirectPort="8443"
+                   maxParameterCount="1000"
+                   maxThreads="3000"
+                   />
+        <Engine name="Catalina" defaultHost="localhost">
+          <Realm className="org.apache.catalina.realm.LockOutRealm">
+            <Realm className="org.apache.catalina.realm.UserDatabaseRealm"
+                   resourceName="UserDatabase"/>
+          </Realm>
+          <Host name="localhost"  appBase="webapps"
+                unpackWARs="true" autoDeploy="true">
+            <Context path="/" docBase="magnoliaPublic"/>
+            <Valve className="org.apache.catalina.valves.AccessLogValve" directory="logs"
+                   prefix="localhost_access_log" suffix=".txt"
+                   pattern="%h %l %u %t &quot;%r&quot; %s %b" />
+          </Host>
+        </Engine>
+      </Service>
+    </Server>
+kind: ConfigMap
+metadata:
+  name: public-server.xml
+  namespace: zb-schools
