--- a/prd/ingress.yaml
+++ b/prd/ingress.yaml
@@ -15,7 +15,7 @@ metadata:
 spec:
   ingressClassName: alb
   rules:
-    - host: www.zbschools.sg
+    - host: prd.zbschools.sg
       http:
         paths:
           - path: /
@@ -46,7 +46,7 @@ spec:
                 name: magnolia-author-backend-svc
                 port:
                   number: 8080
-    - host: m.zbschools.sg
+    - host: m.prd.zbschools.sg
       http:
         paths:
           - path: /
