--- a/prd/magnolia-public-backend.yaml
+++ b/prd/magnolia-public-backend.yaml
@@ -38,7 +38,7 @@ spec:
             - name: TZ
               value: CST-8
             - name: BASE_URL
-              value: "https://www.zbschools.sg"
+              value: "https://prd.zbschools.sg"
             - name: ENV_TYPE
               value: "prd"
             - name: INSTANCE_TYPE
