--- a/dev/saas-transfer-service.yaml
+++ b/dev/saas-transfer-service.yaml
@@ -12,6 +12,11 @@ spec:
   selector:
     matchLabels:
       k8s.kuboard.cn/name: saas-transfer-service
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+    type: RollingUpdate
   template:
     metadata:
       annotations:
